# stenographer

./: .gitignore  Makefile  bot.db  install.sh  main.py  pyproject.toml
bot/: bot.py
deploy/: stenorgapher.service  sudoers
transcriber/: transcriber.py
